pkg/deno/testdata/checker/unstable_api_fail.stderr
error: TS2339 [ERROR]: Property 'createHttpClient' does not exist on type 'typeof Deno'. 'Deno.createHttpClient' is an unstable API. Did you forget to run with the '--unstable' flag?
Deno.createHttpClient({
     ~~~~~~~~~~~~~~~~
    at FILE:1:6
