pkg/deno/testdata/checker/unstable_api_fail.ts
Deno.createHttpClient({
  proxy: {
    url: "",
    basicAuth: {
      username: "",
      password: "",
    },
  },
});
